--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "serve": "vite --mode production",
     "build": "vite build",
     "build:staging": "vite build --mode staging",
-    "preview": "vite preview"
+    "build:analyze": "ANALYZE=true vite build",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint src --ext .vue,.js,.ts --fix",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
@@ -21,6 +25,7 @@
     "@types/node": "^22.15.29",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "@vueuse/core": "^13.4.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-import": "^1.13.8",
     "eslint": "^9.28.0",
@@ -28,9 +33,12 @@
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
     "prettier-plugin-vue": "^1.1.6",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^4.1.8",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-pwa": "^1.0.0",
     "vue-tsc": "^2.2.8"
   }
 }
