--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,46 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    // 编译目标
+    "target": "ES2020",
     "useDefineForClassFields": true,
-    "module": "esnext",
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+
+    // 模块解析
     "moduleResolution": "node",
-    "strict": true,
-    "jsx": "preserve",
-    "sourceMap": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noEmit": true,
+
+    // 类型检查
+    "strict": true,
+    "noFallthroughCasesInSwitch": true,
+
+    // 互操作性
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
+    "forceConsistentCasingInFileNames": true,
+
+    // 其他
     "skipLibCheck": true,
-    "ignoreDeprecations": "5.0", //高版本上句报错，此句解决。如此句报错可注释掉
+    "jsx": "preserve",
+    "sourceMap": true,
+
+    // 路径映射
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
-    //---------
-  },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }],
+    },
 
-  //添加
-  "exclude": ["node_modules"] // // ts排除的文件
+    // 类型定义
+    "types": ["vite/client", "node"]
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "vite.config.ts"
+  ],
+  "exclude": ["node_modules", "dist", "**/*.js"]
 }
