--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "eslint src --ext .vue,.js,.ts --fix",
     "format": "prettier --write src/",
     "generate:sitemap": "node scripts/generate-sitemap.js",
-    "build:seo": "npm run generate:sitemap && npm run build"
+    "build:seo": "npm run generate:sitemap && npm run build",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
@@ -34,6 +35,7 @@
     "babel-plugin-import": "^1.13.8",
     "eslint": "^9.28.0",
     "eslint-plugin-vue": "^10.1.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
     "prettier-plugin-vue": "^1.1.6",
