--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy to GitHub Pages & Cloudflare Pages
 
 on:
   push:
@@ -15,13 +15,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install dependencies
         run: npm install
 
       - name: Build project
         run: npm run build
+        env:
+          # 与 vite.config.ts 对齐：GitHub Pages 使用仓库子路径
+          DEPLOY_TARGET: github
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
